# personalexpensesapp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/banks/: route.ts
frontend/src/app/api/categories/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/expenses/: route.ts
frontend/src/app/api/rental-properties/: route.ts
frontend/src/app/categories/: page.tsx
frontend/src/app/charts/: page.tsx
frontend/src/app/expenses/: page.tsx
frontend/src/app/import/: page.tsx
frontend/src/app/rentals/: page.tsx
frontend/src/app/vehicles/: page.tsx
frontend/src/components/: AddExpenseModal.tsx  BackButton.tsx  BulkEditBar.tsx  CategoryEditor.tsx  ChatWidget.tsx  CommentsEditor.tsx  ExpenseDetailCard.tsx  ExpensesTable.tsx  FilterBar.tsx  NavLinks.tsx  Pagination.tsx  RentalPropertyEditor.tsx
frontend/src/types/: expense.ts
src/personal_expenses_app/: main.py  main_noml.py
src/personal_expenses_app/api/: app.py
src/personal_expenses_app/core/: corrections.py  ml_based_expense_categorizer.py  rule_based_expense_categorizer.py  summarizer.py
src/personal_expenses_app/infrastructure/: banamex_file_loader.py  chase_file_loader.py  citi_csv_file_loader.py  citi_file_loader.py  csv_file_loader.py  expense_db_persistence.py  file_persistence.py  wellsfargo_file_loader.py
src/personal_expenses_app/interface/: user_interaction.py
(+20 files in other folders)
