[project]
name = "personal-expenses-app"
version = "1.0.0"
description = "Manage your personal expenses with ease"
readme = "README.md"
authors = [
    { name = "Manuel Salas", email = "manuel.salasc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "numpy>=1.26.4",
    "pdfplumber>=0.11.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.29",
]

[project.scripts]
personal-expenses-app = "personal_expenses_app.personal_expenses_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
